# versionmanager

./: LICENSE  README.md  setup.cfg  setup.py
versionmanager/: __init__.py  setup.cfg  setup.py  versionmanager.py
versionmanager/versionmanager/: __init__.py  versionmanager.py
