[metadata]
name=versionmanager
version=0.1.0
author=RL_sora12
author_email = sora.programmer@outlook.com
description = Manage different versions
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT

[options]
packages = find:
install_requires =
    requests
    numpy

[options.packages.find]
where = src